test/sema/empty-array-literal.delta.output
empty-array-literal.delta:10:13: error: couldn't infer type of empty array literal
    var a = [];
            ^
