test/sema/empty-array-literal.delta
// RUN: %check_errors %not %delta -typecheck %s

void foo(int[] i) {}

void main() {
    // CHECK-NOT: error
    foo([]);

    // CHECK: [[@LINE+1]]:13: error: couldn't infer type of empty array literal
    var a = [];

    // CHECK-NOT: error
    int[0] b = [];
}
